<resources>
    <string name="app_name">Empowerment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_leaderboard">Leader Board</string>
    <string name="title_empower">Empower</string>
    <string name="title_beEmpowered">Be Empowered</string>

</resources>